* Wed Sep 24 2003 Philip
- Messenger host name changed to scs.msg.yahoo.com

* Mon Sep 22 2003 Philip
- Forgot a strdup

* Sat Sep 20 2003 Philip
- Support protocol 0x0b

* Sat Sep 20 2003 Philip
- Formatting fixes and yahoo_list memory management fixes

* Sat Sep 20 2003 Philip
- No more extern vars (almost)
- yahoo_init now takes optional key/value pairs to set server settings
see the README or yahoo2.h for full details
- These variables no longer need to be exported from the sourcefile that
uses the library

* Fri Sep 12 2003 Philip 0.7.1
- configure checks for socket library and won't build sample client
if not found

* Thu Sep 11 2003 Philip
- Up version number to 0x0a so that we don't get blocked

* Thu Jun 5 2003 Philip
- fix a bunch of memory leaks

* Sun May 25 2003 Philip
- Add option to disable building sample client

* Sat May 24 2003 Philip 0.7.0-1
- Fix configure error because of old missing script in distribution

* Mon May 19 2003 Philip (version 0.7.0)
- Update README
- release 0.7.0

* Tue May 6 2003 Mik
- fixes for webcam uploading
- extra callback for closing connection

* Thu May 1 2003 Philip
- allow closing of webcam connections
- more reliable finding of webcam connections

* Thu May 1 2003 Philip
- send who's images along with webcam image

* Thu May 1 2003 Philip
- get idle time from server
- changes to webcam support to not require the user to worry about keys and 
servers

* Sun Apr 20 2003 Philip
- fixes for multiple connects and bugs introduced when adding async connects

* Sat Apr 19 2003 Philip
- Add asynchronous connects
- Each `id' represents a single login session and everything to do with it
- add_handler and yahoo_(read|write)_ready take a void * data argument
- possibly introduce many bugs :D

* Thu Apr 10 2003 Wayne
- Added callback for the list of chatrooms

* Thu Mar 29 2003 Wayne
- Added basic support for pulling down the list of chatrooms

* Mon Mar 24 2003 Mik
- Seperate webcam struct to public and private data