@@ -49,7 +49,7 @@ pointers/whatever you want.  Parameters are:
 
 	NAME			TYPE		DEFAULT
 	-------------------     -------         ---------------------------
-	pager_host		char *		scs.yahoo.com
+	pager_host		char *		scs.msg.yahoo.com
 	pager_port		int		5050
 	filetransfer_host	char *		filetransfer.msg.yahoo.com
 	filetransfer_port	int		80
